--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section>
           <h1>Geoinquietos</h1>
           <h3>comunidades hispanohablantes geoespaciales</h3>
-
+          <p><a href="http://bit.ly/160407-geoinquietos">bit.ly/160407-geoinquietos</a></p>
 
           <div style="display:none">
             <img src="imgs/organizar.jpg" alt="">
@@ -638,7 +638,7 @@
         <section>
           <h1>Geoinquietos</h1>
           <h3>comunidades hispanohablantes geoespaciales</h3>
-
+          <p><a href="http://bit.ly/160407-geoinquietos">bit.ly/160407-geoinquietos</a></p>
         </section>
 
         <section>
