removed argentina reference as for now

--- a/index.html
+++ b/index.html
@@ -594,11 +594,11 @@
             <li class="fragment">En conversaciones para no crear una nueva</li>
           </ul>
         </section>
-
+<!--
         <section>
           <h2>¿Y para el futuro?</h2>
           <h3>Geoinquietos Argentina</h3>
-        </section>
+        </section> -->
 
         <!-- Conclusión -->
         <section>
