Cambiada bio xurxo por la mia

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Comunidades hispanohablantes de software libre geoespacial</title>
 
     <meta name="description" content="Qué son los geoinquietos y a qué se dedican">
-    <meta name="author" content="Jorge Sanz y Santiago Higuera">
+    <meta name="author" content="Micho García">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -39,9 +39,8 @@
       <div class="slides">
 
         <section>
-          <h1>Geoinquietos</h1>
-          <h3>comunidades hispanohablantes geoespaciales</h3>
-          <p><a href="http://bit.ly/160407-geoinquietos">bit.ly/160407-geoinquietos</a></p>
+          <h1>Geoinquietos,</h1>
+          <h3>una comunidad para dominar el mundo</h3>
 
           <div style="display:none">
             <img src="imgs/organizar.jpg" alt="">
@@ -81,57 +80,20 @@
         </section>
 
        <section>
-          <h2>Jorge Sanz</h2>
+          <h2>Micho García</h2>
           <ul>
-            <li>Trabajo en <a href="http://cartodb.com">CartoDB</a></li>
-            <li><a href="http://twitter.com/xurxosanz">@xurxosanz</a></li>
+            <li>Trabajo en <a href="http://geomati.co">geomati.co</a></li>
+            <li><a href="http://twitter.com/michogar">@michogar</a></li>
             <li>Participo en:
             <ul>
             <li><a href="http://osgeo.org">OSGeo</a> y
               <a href="http://es.osgeo.org">OSGeo-es</a></li>
-            <li><a href="http://geoinquietos.org">Geoinquietos (VLC/MAD)</a></li>
             <li><a href="http://osm.org">OSM</a>
             </ul>
             </li>
-            <li>Escribo cuando puedo en:
-              <ul>
-                <li><a href="http://geomaticblog.net">geomaticblog.net</a></li>
-                <li><a href="http://jorgesanz.net">jorgesanz.net</a></li>
-              </ul>
-            </li>
           </ul>
-          <img src="imgs/jsanz.jpg" style="float: right; max-width: 250px;"/>
+          <img src="imgs/michogar.jpg" style="float: right; max-width: 250px;"/>
         </section>
-
-        <section>
-          <h2 style='float:left;'>Santiago Higuera</h2>
-          <div style='float: right; width: 300px'>
-            <img src="imgs/fotomia.jpg" style="float: right; width:280px"/>
-          </div>
-          <div style='float: left; width:650px'>
-            <ul>
-              <li><a href="http://twitter.com/santiagohiguera">@santiagohiguera</a></li>
-              <li>Profe de informática en <a href='https://twitter.com/caminosupm?lang=es'>@caminosupm</a></li>
-              <li>Mi empresa es <a href="http://mercatorlab.com">Mercatorlab</a></li>
-              <li>Participo en:
-              <ul>         
-              <li><a href="http://osgeo.org">OSGeo</a> y 
-                <a href="http://es.osgeo.org">OSGeo-es</a></li>
-              <li><a href="http://madrid.geoinquietos.org">Geoinquietos 
-                Madrid</a></li>
-              <li><a href="http://osm.org">OSM</a>
-              </ul>
-              </li>
-              <li>Escribo en:
-                <ul>
-                  <li><a href="http://mercatorlab.com/wordpress/">Blog Descartes</a></li>
-                  <li><a href="http://infocaminos.readthedocs.org/en/latest/">Manual GNU-Octave</a></li>
-                  <li><a href="http://openlayers.bicimap.es/manualOpenLayers.html">Manual OpenLayers</a></li>
-                </ul>
-              </li> 
-            </ul>
-          </div>
-          </section> 
 
         <!-- Parte I: OSGeo-es -->
         <!-- <section>
