Cambiado nombre de la imagen

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </ul>
             </li>
           </ul>
-          <img src="imgs/michogar.jpg" style="float: right; max-width: 250px;"/>
+          <img src="imgs/gravatar.jpg" style="float: right; max-width: 250px;"/>
         </section>
 
         <!-- Parte I: OSGeo-es -->
