--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section>
           <h1>Geoinquietos,</h1>
-          <h3>una comunidad para dominar el mundo</h3>
+          <h3>una comunidad para dominar el mundo.</h3>
 
           <div style="display:none">
             <img src="imgs/organizar.jpg" alt="">
@@ -598,9 +598,9 @@
         </section>
 
         <section>
-          <h1>Geoinquietos</h1>
-          <h3>comunidades hispanohablantes geoespaciales</h3>
-          <p><a href="http://bit.ly/160407-geoinquietos">bit.ly/160407-geoinquietos</a></p>
+          <h1>Geoinquietos,</h1>
+          <h3>una comunidad para dominar el mundo.</h3>
+          <p><a href="http://michogarcia.org/geoinquietos-colaboratic">http://michogarcia.org/geoinquietos-colaboratic</a></p>
         </section>
 
         <section>
@@ -613,7 +613,9 @@
             <li><a href="http://es.osgeo.org">Portal de OSGeo-es</a>
             <li><a href="http://geoinquietos.org">Portal de Geoinquietos</a></li>
             <li><a href="http://wiki.osgeo.org/wiki/Category:Iniciativas_Locales"
-              >Geoinquietos en el wiki de OSGeo</a></li>          
+              >Geoinquietos en el wiki de OSGeo</a></li>   
+            <li><a href="https://osgeo-es.github.io/geoinquietos-y-osgeoes"
+              >Geoinquietos comunidades hispanohablantes geoespaciales</a></li>  
           </ul>
         </section>
 
@@ -630,7 +632,7 @@
               Licencia Creative Commons Atribución-NoComercial-CompartirIgual 
               3.0 Unported</a>.
           </p>
-          <p>Enlace a la presentación: <br/> <a href='http://mercatorlab.com/geoinquietos/electionmaps'>http://mercatorlab.com/geoinquietos/electionmaps</a></p>
+          <p>Enlace a la presentación: <br/> <a href='https://github.com/michogar/geoinquietos-colaboratic'>https://github.com/michogar/geoinquietos-colaboratic</a></p>
         </section>
 
       </div>
