nombre completo OSM

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <li><a href="http://twitter.com/manureta">@manureta</a></li>
             <li>Participo en:
             <ul>
-            <li>
-              <a href="http://es.osgeo.org">OSGeo-es</a></li>
-            <li><a href="http://osm.org">OSM</a>
+            <li><a href="http://es.osgeo.org">OSGeo-es</a></li>
+            <li><a href="http://osm.org">OSM (OpenStreetMap)</a>
+              
             </ul>
             </li>
           </ul>
